[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/TileSet/fallingSpike.png" type="Texture" id=1]
[ext_resource path="res://Src/SpecialThing/FallingSpikes.gd" type="Script" id=2]
[ext_resource path="res://Src/Engine/DeathZone2.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 5 )

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Spike/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 0 ), Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 0, 0 ) ]
}

[node name="FallingSpikes" type="Node2D"]
script = ExtResource( 2 )

[node name="Spike" type="KinematicBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Spike"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike"]
position = Vector2( 0, 3 )
shape = SubResource( 1 )
disabled = true

[node name="DeathZone" parent="Spike" instance=ExtResource( 3 )]
position = Vector2( 0, -2 )

[node name="CollisionPolygon2D" parent="Spike/DeathZone" index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="FallArea" type="Area2D" parent="."]
position = Vector2( 0, -48 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallArea"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shake = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Spike/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="FallArea" to="." method="_on_FallArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Spike/DeathZone"]
